2006-10-06 [colin]	2.5.3cvs1-stable

	* src/textview.c
		From 2.5.3cvs11: Fix crasher with quote folding
		on HTML (don't do quote folding on HTML)
	* src/common/utils.c
		From 2.5.3cvs7: Better division
		From 2.5.3cvs6: fix building with --disable-nls

2006-10-04 [paul]	2.5.3

	2.5.3 released

2006-10-03 [colin]	2.5.2cvs5

	* src/mh.c
		From 2.5.2cvs40: Fix "Check for new folders"
		with accentued chars

2006-10-03 [backports]	2.5.2cvs4

	* src/filtering.c
	* src/folder.c
	* src/inc.c
	* src/mbox.c
		From 2.5.2cvs39: Fix "copy" rules

2006-10-03 [backports]	2.5.2cvs3

	* src/folderview.c
	* src/gtk/gtksctree.c
	* src/gtk/gtksctree.h
		From 2.5.2cvs16: Make expanding not recursive 
		in folderview
		From 2.5.2cvs{36,37,38}: Fix 'goto next unread' 
		after collapsing/expanding a node

2006-10-03 [backports]	2.5.2cvs2

	* src/prefs_account.c
	* src/gtk/authors.h
	* AUTHORS
		From 2.5.2cvs4: Fix bug #1024 (Array index out of
		range in sylpheed-claws-2.5.2)
		Patch by Ales Nosek <anosek@suse.cz>

2006-10-03 [backports]	2.5.2cvs1

	* configure.ac
		open the stable_2_5 branch

2006-09-26 [colin]	2.5.2

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.2 released

2006-09-26 [colin]	2.5.1cvs5

	* src/matcher.c
		Fix condition

2006-09-26 [colin]	2.5.1cvs4

	* src/mbox.c
		Revert cvs1 (useless as the message is printed 
		every 500 mails)

2006-09-26 [colin]	2.5.1cvs3

	* src/partial_download.c
		Fix crasher found by Alexsandar Urosevic

2006-09-26 [colin]	2.5.1cvs2

	* src/summaryview.c
		Fix bug #1023 (Sylpheed deletes too much messages)

2006-09-26 [ticho]	2.5.1cvs1

	* src/mbox.c
		Make use of gettext's multiple plurals for statusbar
		progress message.

2006-09-25 [paul]	2.5.1

	* NEWS
	* README
	* RELEASE_NOTES
		2.5.1 released

2006-09-25 [colin]	2.5.0cvs3

	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/spamassassin/spamassassin.c
		BogoFilter, Spamassassin: Fix double hook registering after
		visiting preferences