@@ -1920,3 +1920,4 @@
 ( cvs diff -u -r 1.60.2.21 -r 1.60.2.22 src/filtering.c;  cvs diff -u -r 1.213.2.115 -r 1.213.2.116 src/folder.c;  cvs diff -u -r 1.149.2.58 -r 1.149.2.59 src/inc.c;  cvs diff -u -r 1.28.2.28 -r 1.28.2.29 src/mbox.c;  ) > 2.5.2cvs4.patchset
 ( cvs diff -u -r 1.79.2.41 -r 1.79.2.42 src/mh.c;  ) > 2.5.2cvs5.patchset
 ( cvs diff -u -r 1.96.2.150 -r 1.96.2.151 src/textview.c;  cvs diff -u -r 1.36.2.79 -r 1.36.2.80 src/common/utils.c;  ) > 2.5.3cvs1.patchset
+( cvs diff -u -r 1.96.2.150.2.1 -r 1.96.2.150.2.2 src/textview.c;  ) > 2.5.3cvs2.patchset
